ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multihostingress
  namespace: dev
spec:
  rules:
    - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: wil-playground
            port:
              number: 80
